# auth/adapter/controller/main.go
@@ -1,20 +1,37 @@
 package controller
 
 import (
+	"github/simson613/webrtc-project/auth/config"
 	"github/simson613/webrtc-project/auth/usecase"
 
 	"github.com/gin-gonic/gin"
 )
 
 type Controller struct {
-	uc *usecase.Usecase
+	config config.ConfigInterface
+	uc     *usecase.Usecase
 }
 
-func InitController(uc *usecase.Usecase) *Controller {
+func InitController(config config.ConfigInterface, uc *usecase.Usecase) *Controller {
 	return &Controller{
-		uc: uc,
+		config: config,
+		uc:     uc,
 	}
 }
 
 func (ctl *Controller) Routing(r *gin.Engine) {
+	r.POST("/login", ctl.Login)
+	// r.POST("/logout", ctl.Logout)
+	// r.POST("/reissuance", ctl.Ressuance)
+	// r.PUT("/operator/password", util.OperatorTokenAuthMiddleware(operatorSecret), ctl.UpdateOperatorPasswordByNo)
+}
+
+func (ctl *Controller) setCookie(c *gin.Context, value string) {
+	name := ctl.config.Cookie().Name()
+	domain := ctl.config.Cookie().Domain()
+	path := ctl.config.Cookie().Path()
+	secure := ctl.config.Cookie().Secure()
+	httpOnly := ctl.config.Cookie().HttpOnly()
+	expires := ctl.config.Cookie().Expires() * 60 * 60
+	c.SetCookie(name, value, expires, path, domain, secure, httpOnly)
 }
